Partial revert "Stub for TranscodeDialog"

This reverts commit 4717541746803cba65685016f7c7384cf7fdc55b.

BUG: 303110
FIXED-IN: 2.7